--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>FOSSASIA | Asia's Open Technology Organization for Open Source Software, Hardware, Open Design, Open Data, Open Knowledge</title>
+        <title>FOSSASIA s| Asia's Open Technology Organization for Open Source Software, Hardware, Open Design, Open Data, Open Knowledge</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="FOSSASIA Open Tech Community - Open Source, Big Data, Design Thinking and Free Knowledge Tools with Asia's Premier Open Technology Organization">
         <meta name="keywords" content="FOSSASIA, FOSS, Free and Open Source Software, Asia">
